# pdftomd_w_gemini

./: .gitignore  README.md  pyproject.toml  test_output.md
pdftomd/: __init__.py  __main__.py  cli.py  converter.py  extractor.py  models.py
