[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdftomd"
version = "2.0.0"
description = "Ultra-simple PDF to Markdown extractor using Google Gemini"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Joaquin Mulet" }
]
keywords = ["pdf", "markdown", "gemini", "extraction", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pdftomd = "pdftomd.cli:main"

[project.urls]
Repository = "https://github.com/JoaquinMulet/pdftomd"
